chore: Update navigation links in index.html and contact.html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       />
       <nav>
         <ul>
+          <li><a href="/index.html">Home</a></li>
           <li>La idea</li>
           <li>Llença't</li>
           <li>H-Team</li>
           <li>Amistats</li>
           <li>Opinions</li>
-          <li>Contactar</li>
+          <li><a href="/contact.html">Contactar</a></li>
         </ul>
       </nav>
     </header>
@@ -49,7 +50,7 @@
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                suscipit animi deleniti 
+                suscipit animi deleniti
               </p>
             </article>
             <article>
@@ -62,40 +63,76 @@
               </div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Inventore ullam maiores blanditiis consequuntur 
+                Inventore ullam maiores blanditiis consequuntur
               </p>
             </article>
           </section>
           <section class="section2">
             <article>
-              <img src="/img/03-where-is-located.png" alt="where-is-located">
+              <img
+                src="/img/03-where-is-located.png"
+                alt="where-is-located"
+              />
               <h2>On va?</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
             <article>
-              <img src="/img/04-why-should-i.png" alt="why-should-i">
+              <img
+                src="/img/04-why-should-i.png"
+                alt="why-should-i"
+              />
               <h2>Perquè he de fer-ho?</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
             <article>
-              <img src="/img/05-who-should-i-mention.png" alt="who-should-i-mention">
+              <img
+                src="/img/05-who-should-i-mention.png"
+                alt="who-should-i-mention"
+              />
               <h2>A quí he de afegir?</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
             <article>
-              <img src="/img/06-meta-name-or-humans-txt.png" alt="meta-name-or-humans-txt">
+              <img
+                src="/img/06-meta-name-or-humans-txt.png"
+                alt="meta-name-or-humans-txt"
+              />
               <h2>META Name VS Human.txt</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
             <article>
-              <img src="/img/07-the-internet-is-for-humans.png" alt="the-internet-is-for-humans">
+              <img
+                src="/img/07-the-internet-is-for-humans.png"
+                alt="the-internet-is-for-humans"
+              />
               <h2>El web es per a humans...</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
             <article>
-              <img src="/img/08-looking-for-a-standard.png" alt="looking-for-a-standard">
+              <img
+                src="/img/08-looking-for-a-standard.png"
+                alt="looking-for-a-standard"
+              />
               <h2>Cercant un estàndar</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, quos.</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio, quos.
+              </p>
             </article>
           </section>
         </div>
@@ -108,16 +145,31 @@
           <p>@</p>
           <p>T</p>
           <p>F</p>
-          <img src="/img/spotify.png" alt="spotify">
+          <img
+            src="/img/spotify.png"
+            alt="spotify"
+          />
         </div>
       </div>
       <div>
-        <img src="/img/ico-html5.png" alt="ico-html5">
-        <img src="/img/humanstxt-isolated-blank.gif" alt="humanstxt-isolated-blank">
+        <img
+          src="/img/ico-html5.png"
+          alt="ico-html5"
+        />
+        <img
+          src="/img/humanstxt-isolated-blank.gif"
+          alt="humanstxt-isolated-blank"
+        />
       </div>
       <div class="last-footer-container">
-        <img src="/img/CC.png" alt="imagen">
-        <p>humans.txt is licenced under a <span>Creative Commons Attribution Non-Comercial...</span></p>
+        <img
+          src="/img/CC.png"
+          alt="imagen"
+        />
+        <p>
+          humans.txt is licenced under a
+          <span>Creative Commons Attribution Non-Comercial...</span>
+        </p>
       </div>
     </footer>
   </body>
