Update navigation links in index.html and contact.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>UF1 Avaluació</title>
+    <title>Home UF1 Avaluació</title>
+    <link rel="stylesheet" href="/global.css">
     <link
       rel="stylesheet"
       href="style.css"
