--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Contacto</title>
+    <link rel="stylesheet" href="/global.css">
     <link
       rel="stylesheet"
       href="/contact.css"
